fixed landing page  alignment

--- a/Css/landing_page.css
+++ b/Css/landing_page.css
@@ -7,9 +7,13 @@
     font-family: 'Poppins', sans-serif;
 }
 
+body{
+    background: url('/Images/landing.png') bottom/cover no-repeat;
+
+}
 
 
-.overlay {
+/* .overlay {
     background: url('/Images/landing.png') bottom/cover no-repeat;
     display: flex;
     justify-content: center;
@@ -17,7 +21,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-}
+} */
 
 
 .content-card {
@@ -30,7 +34,7 @@
     box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
     backdrop-filter: blur(10px);
     max-width: 380px;
-    margin-left:20%;
+    margin: 24.5vh auto;
 }
 
 
